# telegram-bot-on-llm

./: README.md
.github/workflows/: ci.yml
argocd/: application.yaml
bot/: Dockerfile  main.py  pyproject.toml
helm/bot/: Chart.yaml  values.yaml
helm/bot/templates/: deployment.yaml  service.yaml
